--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/common/swiper-4.3.3.min.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-
+    <div class="box">
+        <header>
+            <h2>讨论版</h2>
+            <div class="header_top">
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <ul>
+                                <li>
+                                    <img src="images/1.gif" alt="">
+                                    <p>论杂志封面的宠儿</p>
+                                </li>
+                                <li>
+                                    <img src="images/2.gif" alt="">
+                                    <p>论杂志封面的宠儿</p>
+                                </li>
+                                <li>
+                                    <img src="images/2.gif" alt="">
+                                    <p>论杂志封面的宠儿</p>
+                                </li>
+                                <li>
+                                    <img src="images/1.gif" alt="">
+                                    <p>论杂志封面的宠儿</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="swiper-slide">
+                            <ul>
+                                <li>
+                                    <img src="images/1.gif" alt="">
+                                    <p>论杂志封面的宠儿</p>
+                                </li>
+                                <li>
+                                    <img src="images/2.gif" alt="">
+                                    <p>论杂志封面的宠儿</p>
+                                </li>
+                                <li>
+                                    <img src="images/2.gif" alt="">
+                                    <p>论杂志封面的宠儿</p>
+                                </li>
+                                <li>
+                                    <img src="images/1.gif" alt="">
+                                    <p>论杂志封面的宠儿</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="swiper-slide">
+                            <ul>
+                                <li>
+                                    <img src="images/1.gif" alt="">
+                                    <p>论杂志封面的宠儿</p>
+                                </li>
+                                <li>
+                                    <img src="images/2.gif" alt="">
+                                    <p>论杂志封面的宠儿</p>
+                                </li>
+                                <li>
+                                    <img src="images/2.gif" alt="">
+                                    <p>论杂志封面的宠儿</p>
+                                </li>
+                                <li>
+                                    <img src="images/1.gif" alt="">
+                                    <p>论杂志封面的宠儿</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <section>
+            <h2>有书头条</h2>
+            <div class="content">
+                <ul>
+                    <li>
+                        <div class="left">
+                            <h2>你所不知道的“转转有书”</h2>
+                            <p>你真的知道转转有书吗？真的真的真的还是假的知道</p>
+                            <span>2018-05-10</span>
+                        </div>
+                        <div class="right">
+                            <img src="images/3.gif" alt="">
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </div>
 </body>
+<script src="js/lib/flexible.js"></script>
+<script src="js/lib/swiper-4.1.6.min.js"></script>
+<script src="js/lib/bscroll.js"></script>
+<script src="js/index.js"></script>
 
 </html>
