--- a/src/index.html
+++ b/src/index.html
@@ -84,8 +84,8 @@
         <section>
             <h2>有书头条</h2>
             <div class="content">
-                <ul>
-                    <li>
+                <ul class="ulList">
+                    <!-- <li>
                         <div class="left">
                             <h2>你所不知道的“转转有书”</h2>
                             <p>你真的知道转转有书吗？真的真的真的还是假的知道</p>
@@ -94,7 +94,7 @@
                         <div class="right">
                             <img src="images/3.gif" alt="">
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </section>
@@ -103,6 +103,7 @@
 <script src="js/lib/flexible.js"></script>
 <script src="js/lib/swiper-4.1.6.min.js"></script>
 <script src="js/lib/bscroll.js"></script>
+<script src="js/lib/jquery-2.1.1.min.js"></script>
 <script src="js/index.js"></script>
 
 </html>
